# OlioKurssi

./: .gitignore  README.md
Viikkotehtava6/: CMakeLists.txt  main.cpp  student.cpp  student.h
viikko3palautus/: CMakeLists.txt
viikkoharjoitus3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikkotehtava5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
